feat: update external event management (#236)
* fix update event when event_write role is not provided
* update all properties even if event is external (except source and external id)
* add new endpoint to get event from source and external id, so save event will not update external event if already exists
